[package]
name = "git_spoofer"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
error-chain = "0.12.4"
git2 = "0.17.2"
reqwest = {version="0.11.18", features=["blocking"]}
serde_json = "1.0.99"
tokio = {version="1.29.1", features = ["full"]}
