[package]
name = "git_spoofer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
git2 = "0.17.2"
openssl = { version = "0.10.55", features = ["vendored"] }
reqwest = {version="0.11.18", features=["blocking"]}
serde_json = "1.0.99"

[profile.release]
strip = true
lto = true
